--- a/example/.civgen-model.yaml
+++ b/example/.civgen-model.yaml
@@ -5,3 +5,4 @@ view_path: pkg/view
 repository_path: pkg/domain/repository
 dao_path: pkg/infra/dao
 error_path: pkg/apperror
+database_path: pkg/mysql
